@@ -88,7 +88,7 @@
 		<!-- xs2a version -->
 		<xs2a.version>9.0</xs2a.version>
 		<!-- ledgers version -->
-		<ledgers.version>4.1-SNAPSHOT</ledgers.version>
+		<ledgers.version>4.0.1</ledgers.version>
 
 		<!-- other properties -->
 		<spring-boot-dependencies.version>2.2.4.RELEASE</spring-boot-dependencies.version>
